--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head> 
   <body id="gradient">
     <h1>Background Generator</h1>
-    <input type="color" value="#0000ff" class="color1" >
-    <input type="color" value="#ff0000" class="color2">
+    <input type="color" value="#FF5757" class="color1" >
+    <input type="color" value="#3D3DFF" class="color2">
     <h2>Current css background</h2>
-    <h3>linear-gradient(to right, rgb(0, 0, 255), rgb(255, 0, 0));</h3>
+    <h3>linear-gradient(to right, rgb(255, 87, 87), rgb(61, 61, 255));</h3>
     <button onClick="randomColor()" class="random">Random color</button>
     <script type="text/javascript" src="script.js"></script>
   </body>
